// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopicOverview with promotion banner renders correct DOM according to data from useTopicDetails and getClusterDetails 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: repeat(2, minmax(0, 1fr)); grid-template-rows: auto; gap: 24px;"
  >
    <div
      style="grid-column: span 2 / span 2;"
    >
      <div
        class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
      >
        <div
          class="flex flex-col flex-auto gap-4"
        >
          <div
            class="typography-default-strong text-intense"
          >
            Topic details
          </div>
          <div
            class="typography-caption text-default"
          >
            <div
              style="display: flex; gap: 160px;"
            >
              <div
                style="display: flex; justify-content: space-around; flex-direction: column;"
              >
                <div
                  class="typography-heading text-default"
                >
                  1
                </div>
                <div
                  class="typography-small text-grey-50"
                >
                  Replicas
                </div>
              </div>
              <div
                style="display: flex; justify-content: space-around; flex-direction: column;"
              >
                <div
                  class="typography-heading text-default"
                >
                  1
                </div>
                <div
                  class="typography-small text-grey-50"
                >
                  Partitions
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="grid-column: span 2 / span 2;"
    >
      <div
        class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
      >
        <div
          class="flex flex-col flex-auto gap-4"
        >
          <div
            class="typography-default-strong text-intense"
          >
            Topic owner
          </div>
          <div
            class="typography-caption text-default"
          >
            <div
              class="typography-default text-default"
            >
              Ospo
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="grid-column: span 2 / span 2;"
    >
      <div
        data-testid="topic-promotion-banner"
      >
        <div
          class="Aquarium-Banner rounded flex justify-between gap-7 flex-nowrap p-6 bg-muted"
        >
          <div
            class="flex w-full flex-col"
          >
            <div
              class="typography-default text-default flex-grow"
            >
              <div
                style="display: flex; flex-direction: column; gap: 16px;"
              >
                <p
                  style="margin-bottom: 16px;"
                >
                  This 
                  topic
                   has not yet been promoted to the 
                  TST
                   environment.
                </p>
              </div>
              <a
                class="Aquarium-Link focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 hover:text-primary-hover Aquarium-Button whitespace-nowrap transition text-center rounded-sm relative px-4 py-3 inline-flex gap-3 items-center justify-center active:text-white active:bg-primary-active hover:bg-primary-intense disabled:text-white disabled:bg-primary-muted Aquarium-Button.Primary text-white bg-primary-default icon-stroke-2 typography-default-strong"
                href="/topic/aivendemotopic/request-promotion?sourceEnv=1&targetEnv=2"
              >
                Promote
              </a>
            </div>
          </div>
          <div
            style="display: inline-flex; align-items: center; margin: -24px -24px -24px 0px;"
          >
            <img
              alt=""
              class="bg-cover object-cover w-full"
              src="/test-image.svg"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      style="grid-column: span 2 / span 2;"
    >
      <div
        class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
      >
        <div
          class="flex flex-col flex-auto gap-4"
        >
          <div
            class="typography-default-strong text-intense"
          >
            Cluster details
          </div>
          <div
            class="typography-caption text-default"
          >
            <div
              class="visually-hidden"
            >
              Cluster details are updating
            </div>
            <div
              aria-hidden="true"
            >
              <dl
                style="display: grid; grid-template-columns: repeat(2, minmax(0, 1fr)); row-gap: 24px;"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Bootstrap server
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Protocol
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Kafka flavor
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Rest API
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Cluster name
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Cluster status
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
              </dl>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
    >
      <div
        class="flex flex-col flex-auto gap-4"
      >
        <div
          class="typography-default-strong text-intense"
        >
          Subscriptions
        </div>
        <div
          class="typography-caption text-default"
        >
          <div
            style="display: flex; gap: 160px;"
          >
            <div
              style="display: flex; justify-content: space-around; flex-direction: column;"
            >
              <div
                class="typography-heading text-default"
              >
                1
              </div>
              <div
                class="typography-small text-grey-50"
              >
                Producers
              </div>
            </div>
            <div
              style="display: flex; justify-content: space-around; flex-direction: column;"
            >
              <div
                class="typography-heading text-default"
              >
                0
              </div>
              <div
                class="typography-small text-grey-50"
              >
                Consumers
              </div>
            </div>
          </div>
          <div
            style="display: flex; flex-direction: row; padding-top: 24px; gap: 32px;"
          >
            <a
              href="/topic/aivendemotopic/subscribe?env=1"
            >
              <button
                class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 active:text-primary-active disabled:text-primary-inactive disabled:bg-body Aquarium-Button whitespace-nowrap transition text-center text-primary-intense rounded-sm relative py-3 inline-flex gap-3 items-center justify-center hover:text-primary-active Aquarium-Button.Ghost px-0 icon-stroke-2 typography-default-strong"
              >
                <div
                  class="flex items-center justify-center gap-3"
                >
                  <svg
                    aria-hidden="true"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 22 22"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <path
                      d="M11 7.333v7.334M7.333 11h7.334m5.5 0a9.167 9.167 0 11-18.334 0 9.167 9.167 0 0118.334 0Z"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                  <div
                    class="typography-small-strong text-primary-80"
                  >
                    Request new subscription
                  </div>
                </div>
              </button>
            </a>
            <a
              href="/topic/aivendemotopic/subscriptions"
            >
              <button
                class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 active:text-primary-active disabled:text-primary-inactive disabled:bg-body Aquarium-Button whitespace-nowrap transition text-center text-primary-intense rounded-sm relative py-3 inline-flex gap-3 items-center justify-center hover:text-primary-active Aquarium-Button.Ghost px-0 icon-stroke-2 typography-default-strong"
              >
                <div
                  class="flex items-center justify-center gap-3"
                >
                  <div
                    class="typography-small-strong text-primary-80"
                  >
                    See subscriptions
                  </div>
                </div>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
    >
      <div
        class="flex flex-col flex-auto gap-4"
      >
        <div
          class="typography-default-strong text-intense"
        >
          Schemas
        </div>
        <div
          class="typography-caption text-default"
        >
          <div
            style="display: flex; justify-content: space-around; flex-direction: column;"
          >
            <div
              class="typography-heading text-default"
            >
              1
            </div>
            <div
              class="typography-small text-grey-50"
            >
              Schemas
            </div>
          </div>
          <div
            style="display: flex; flex-direction: row; padding-top: 24px; gap: 32px;"
          >
            <a
              href="/topic/aivendemotopic/request-schema"
            >
              <button
                class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 active:text-primary-active disabled:text-primary-inactive disabled:bg-body Aquarium-Button whitespace-nowrap transition text-center text-primary-intense rounded-sm relative py-3 inline-flex gap-3 items-center justify-center hover:text-primary-active Aquarium-Button.Ghost px-0 icon-stroke-2 typography-default-strong"
              >
                <div
                  class="flex items-center justify-center gap-3"
                >
                  <svg
                    aria-hidden="true"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 22 22"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <path
                      d="M11 7.333v7.334M7.333 11h7.334m5.5 0a9.167 9.167 0 11-18.334 0 9.167 9.167 0 0118.334 0Z"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                  <div
                    class="typography-small-strong text-primary-80"
                  >
                    Request new schema
                  </div>
                </div>
              </button>
            </a>
            <a
              href="/topic/aivendemotopic/schema"
            >
              <button
                class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 active:text-primary-active disabled:text-primary-inactive disabled:bg-body Aquarium-Button whitespace-nowrap transition text-center text-primary-intense rounded-sm relative py-3 inline-flex gap-3 items-center justify-center hover:text-primary-active Aquarium-Button.Ghost px-0 icon-stroke-2 typography-default-strong"
              >
                <div
                  class="flex items-center justify-center gap-3"
                >
                  <div
                    class="typography-small-strong text-primary-80"
                  >
                    See schema
                  </div>
                </div>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`TopicOverview without promotion banner renders correct DOM according to data from useTopicDetails and getClusterDetails 1`] = `
<div>
  <div
    style="display: grid; grid-template-columns: repeat(2, minmax(0, 1fr)); grid-template-rows: auto; gap: 24px;"
  >
    <div
      style="grid-column: span 2 / span 2;"
    >
      <div
        class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
      >
        <div
          class="flex flex-col flex-auto gap-4"
        >
          <div
            class="typography-default-strong text-intense"
          >
            Topic details
          </div>
          <div
            class="typography-caption text-default"
          >
            <div
              style="display: flex; gap: 160px;"
            >
              <div
                style="display: flex; justify-content: space-around; flex-direction: column;"
              >
                <div
                  class="typography-heading text-default"
                >
                  1
                </div>
                <div
                  class="typography-small text-grey-50"
                >
                  Replicas
                </div>
              </div>
              <div
                style="display: flex; justify-content: space-around; flex-direction: column;"
              >
                <div
                  class="typography-heading text-default"
                >
                  1
                </div>
                <div
                  class="typography-small text-grey-50"
                >
                  Partitions
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="grid-column: span 2 / span 2;"
    >
      <div
        class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
      >
        <div
          class="flex flex-col flex-auto gap-4"
        >
          <div
            class="typography-default-strong text-intense"
          >
            Topic owner
          </div>
          <div
            class="typography-caption text-default"
          >
            <div
              class="typography-default text-default"
            >
              Ospo
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="grid-column: span 2 / span 2;"
    >
      <div
        class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
      >
        <div
          class="flex flex-col flex-auto gap-4"
        >
          <div
            class="typography-default-strong text-intense"
          >
            Cluster details
          </div>
          <div
            class="typography-caption text-default"
          >
            <div
              class="visually-hidden"
            >
              Cluster details are updating
            </div>
            <div
              aria-hidden="true"
            >
              <dl
                style="display: grid; grid-template-columns: repeat(2, minmax(0, 1fr)); row-gap: 24px;"
              >
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Bootstrap server
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Protocol
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Kafka flavor
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Rest API
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Cluster name
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
                <div
                  style="display: flex; flex-direction: column;"
                >
                  <dt
                    class="inline-block mb-2 typography-small-strong text-grey-60"
                  >
                    Cluster status
                  </dt>
                  <dd
                    class="typography-small text-default"
                  >
                    <div
                      aria-label="Loading..."
                      class="bg-default h-auto before:content-['_'] whitespace-pre origin-[0%_45%] scale-[0.55] block animate-pulse Aquarium-Skeleton"
                      role="progressbar"
                    />
                  </dd>
                </div>
              </dl>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
    >
      <div
        class="flex flex-col flex-auto gap-4"
      >
        <div
          class="typography-default-strong text-intense"
        >
          Subscriptions
        </div>
        <div
          class="typography-caption text-default"
        >
          <div
            style="display: flex; gap: 160px;"
          >
            <div
              style="display: flex; justify-content: space-around; flex-direction: column;"
            >
              <div
                class="typography-heading text-default"
              >
                1
              </div>
              <div
                class="typography-small text-grey-50"
              >
                Producers
              </div>
            </div>
            <div
              style="display: flex; justify-content: space-around; flex-direction: column;"
            >
              <div
                class="typography-heading text-default"
              >
                0
              </div>
              <div
                class="typography-small text-grey-50"
              >
                Consumers
              </div>
            </div>
          </div>
          <div
            style="display: flex; flex-direction: row; padding-top: 24px; gap: 32px;"
          >
            <a
              href="/topic/aivendemotopic/subscribe?env=1"
            >
              <button
                class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 active:text-primary-active disabled:text-primary-inactive disabled:bg-body Aquarium-Button whitespace-nowrap transition text-center text-primary-intense rounded-sm relative py-3 inline-flex gap-3 items-center justify-center hover:text-primary-active Aquarium-Button.Ghost px-0 icon-stroke-2 typography-default-strong"
              >
                <div
                  class="flex items-center justify-center gap-3"
                >
                  <svg
                    aria-hidden="true"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 22 22"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <path
                      d="M11 7.333v7.334M7.333 11h7.334m5.5 0a9.167 9.167 0 11-18.334 0 9.167 9.167 0 0118.334 0Z"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                  <div
                    class="typography-small-strong text-primary-80"
                  >
                    Request new subscription
                  </div>
                </div>
              </button>
            </a>
            <a
              href="/topic/aivendemotopic/subscriptions"
            >
              <button
                class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 active:text-primary-active disabled:text-primary-inactive disabled:bg-body Aquarium-Button whitespace-nowrap transition text-center text-primary-intense rounded-sm relative py-3 inline-flex gap-3 items-center justify-center hover:text-primary-active Aquarium-Button.Ghost px-0 icon-stroke-2 typography-default-strong"
              >
                <div
                  class="flex items-center justify-center gap-3"
                >
                  <div
                    class="typography-small-strong text-primary-80"
                  >
                    See subscriptions
                  </div>
                </div>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
    <div
      class="border-[2px] border-muted rounded-[2px] relative p-5 flex flex-col gap-5 bg-body outline-none transition-all w-full Aquarium-Card"
    >
      <div
        class="flex flex-col flex-auto gap-4"
      >
        <div
          class="typography-default-strong text-intense"
        >
          Schemas
        </div>
        <div
          class="typography-caption text-default"
        >
          <div
            style="display: flex; justify-content: space-around; flex-direction: column;"
          >
            <div
              class="typography-heading text-default"
            >
              1
            </div>
            <div
              class="typography-small text-grey-50"
            >
              Schemas
            </div>
          </div>
          <div
            style="display: flex; flex-direction: row; padding-top: 24px; gap: 32px;"
          >
            <a
              href="/topic/aivendemotopic/request-schema"
            >
              <button
                class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 active:text-primary-active disabled:text-primary-inactive disabled:bg-body Aquarium-Button whitespace-nowrap transition text-center text-primary-intense rounded-sm relative py-3 inline-flex gap-3 items-center justify-center hover:text-primary-active Aquarium-Button.Ghost px-0 icon-stroke-2 typography-default-strong"
              >
                <div
                  class="flex items-center justify-center gap-3"
                >
                  <svg
                    aria-hidden="true"
                    height="20"
                    preserveAspectRatio="xMidYMid meet"
                    role="img"
                    viewBox="0 0 22 22"
                    width="20"
                    xmlns="http://www.w3.org/2000/svg"
                    xmlns:xlink="http://www.w3.org/1999/xlink"
                  >
                    <path
                      d="M11 7.333v7.334M7.333 11h7.334m5.5 0a9.167 9.167 0 11-18.334 0 9.167 9.167 0 0118.334 0Z"
                      fill="none"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="1.5"
                    />
                  </svg>
                  <div
                    class="typography-small-strong text-primary-80"
                  >
                    Request new schema
                  </div>
                </div>
              </button>
            </a>
            <a
              href="/topic/aivendemotopic/schema"
            >
              <button
                class="focus:outline-none focus-visible:ring-2 focus-visible:ring-primary-default focus-visible:ring-offset-2 active:text-primary-active disabled:text-primary-inactive disabled:bg-body Aquarium-Button whitespace-nowrap transition text-center text-primary-intense rounded-sm relative py-3 inline-flex gap-3 items-center justify-center hover:text-primary-active Aquarium-Button.Ghost px-0 icon-stroke-2 typography-default-strong"
              >
                <div
                  class="flex items-center justify-center gap-3"
                >
                  <div
                    class="typography-small-strong text-primary-80"
                  >
                    See schema
                  </div>
                </div>
              </button>
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
